Change mv to cp for website files in Vagrantfile
This is done to keep the file access rights same. Using the move command can change the file access rights for users

--- a/Fundamentals/website_hosting_IAC/Vagrantfile
+++ b/Fundamentals/website_hosting_IAC/Vagrantfile
@@ -83,7 +83,7 @@ Vagrant.configure("2") do |config|
     cd /home/vagrant/website_files
     wget https://templatemo.com/tm-zip-files-2020/templatemo_520_highway.zip
     unzip -o templatemo_520_highway.zip
-    mv templatemo_520_highway/* /var/www/html/
+    cp -r templatemo_520_highway/* /var/www/html/
 
     systemctl restart httpd
     cd /home/vagrant
